recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:8: error: ';' expected but ',' found.
		dragon(order-1, (x + z)/2 + (t - y)/2, (y + t)/2 - (z - x)/2), z, t)
                                                                             ^